<resources>
    <string name="app_name">BLE-426</string>
    <string name="action_settings">Settings</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Action Board:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="button_send">SEND</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
</resources>
